# PyDEA

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  build_docs.sh  build_source.sh  coverage.xml  fix_gallery_links.py  memo.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_all_versions.sh
.github/ISSUE_TEMPLATE/: bug-report.yaml  documentation.yaml  feature-request.yaml  refactoring.yaml
.github/workflows/: deploy-docs.yml  unit_test.yml
_docs_src/: Pyfrontier.domain.rst  Pyfrontier.rst  conf.py  index.rst  modules.rst  sg_execution_times.rst
_docs_src/auto_examples/: teste.py
_docs_src/tutorials/: index.rst
_old/model/: dea_model.py  dmu.py  metric.py  solver.py
_tutorials/: index.rst
_tutorials/dea/: index.rst  sg_execution_times.rst  teste.ipynb  teste.rst
docs/: .buildinfo  PyDEA.domain.html  PyDEA.frontier_model.html  PyDEA.html  PyDEA.model.html  PyDEA.sam.html  PyDEA.solver.html  Pyfrontier.domain.html  Pyfrontier.frontier_model.html  Pyfrontier.html  Pyfrontier.solver.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/.doctrees/: PyDEA.doctree  PyDEA.domain.doctree  PyDEA.frontier_model.doctree  PyDEA.model.doctree  PyDEA.sam.doctree  PyDEA.solver.doctree  Pyfrontier.doctree  Pyfrontier.domain.doctree  Pyfrontier.frontier_model.doctree  environment.pickle  (+4 more)
notebooks/: Untitled.ipynb
references/: yamada.md
tests/: conftest.py  test_additive_dea.py  test_envelop_dea.py  test_envelope_dea.py  test_multiple_dea.py
tutorials/: README.rst  bib-build.py  ref.bib
(+391 files in other folders)
