[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "Pyfrontier"
version = "1.0.3"
description = "Pyfrontier is a data envelopment analysis for Python user."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Takeshi Morinibu", email = "takeshi715tech@gmail.com"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
    "pulp>=2.6.0",
]

[project.urls]
Homepage = "https://nibutake.github.io/PyDEA/index.html"
Repository = "https://github.com/NibuTake/PyDEA"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-runner>=6.0",
    "pandas>=1.3",
    "pre-commit>=3.0",
    "black>=24.0",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.0",
    "jupyter>=1.0",
    "nbsphinx>=0.8",
    "commonmark>=0.9",
    "recommonmark>=0.7",
    "sphinx-gallery>=0.11",
    "pillow>=9.0",
    "matplotlib>=3.5",
    "bibtexparser>=1.2",
    "twine>=4.0",
    "wheel>=0.38",
    "codecov>=2.1",
]
